--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 					<div class="video-wrapper-section">
 						<div class="videoWrapper">
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/k0MKTsxWBNM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/Ni9VatUdL2c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
