Changed services image names

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 
 	<section class="container services" id="services"> 
 				<div class="column">
-					<img src="images/shape_7.png">
+					<img src="images/Shape_7.png">
 					<h3>Duis aute irure</h3>
 					<p>Excepteur sint occaecat cupi datat non it proident, sunt in culpa qui officia dese runtorn mollit anim id est laborum.</p>	
 				</div>
 
 				<div class="column">
-					<img src="images/shape_8.png">
+					<img src="images/Shape_8.png">
 					<h3>Duis aute irure</h3>
 					<p>Excepteur sint occaecat cupi datat non it proident, sunt in culpa qui officia dese runtorn mollit anim id est laborum.</p>	
 				</div>
 
 				<div class="column">
-					<img src="images/shape_9.png">
+					<img src="images/Shape_9.png">
 					<h3>Duis aute irure</h3>
 					<p>Excepteur sint occaecat cupi datat non it proident, sunt in culpa qui officia dese runtorn mollit anim id est laborum.</p>	
 				</div>
